Fix layout issue (#1935)
* Add Health Information fields to Client Import

* Fix loayout issue contact details

--- a/src/components/ContactDetailsContainer/ContactDetailsContainer.module.scss
+++ b/src/components/ContactDetailsContainer/ContactDetailsContainer.module.scss
@@ -5,8 +5,6 @@
     padding: 0 3rem;
     background-color: #f1f1f1;
     overflow-x: auto;
-
-    @include small {
-        padding: 0 0.5rem;
-    }
+    justify-content: center;
+    padding-top: 40px;
 }
