--- a/src/components/ContactDetailsContainer/OverviewContainer/StageContainer/StageContainer.module.scss
+++ b/src/components/ContactDetailsContainer/OverviewContainer/StageContainer/StageContainer.module.scss
@@ -1,7 +1,6 @@
 @import "../../../../scss/globalDefines.scss";
 
 .stage {
-    padding-top: 40px;
     padding-bottom: 0px;
     color: #052A63;
     font-size: 24px;
